# VSilkroadBot

./: .gitignore  CMakeLists.txt  README.md  build.bat  deps.bat  install.bat  installInterception.bat  main.cpp  uninstallInterception.bat
assets/digitsNN_train/: digitNN.py  train.bat
assets/digitsNN_train/model_saved/: fingerprint.pb  keras_metadata.pb  saved_model.pb
assets/digitsNN_train/model_saved/variables/: variables.data-00000-of-00001  variables.index
include/: Consts.hpp  interfaces.hpp  types.hpp  utils.hpp
include/Bot/: Bot.hpp  BotNavigation.hpp  CharacterMovement.hpp  FrameProcess.hpp  MobTimer.hpp  NearbyPlayerDebouncer.hpp  SettingsManager.hpp
include/CustomUiObj/: BotNavigationMapView.hpp  DoubleImageView.hpp  ImagePixelPicker.hpp  RectImageView.hpp  SettingsWindowRgbPosWidget.hpp
include/IO/: HIDController.hpp  WindowManager.hpp
include/UiForms/: PixelPickerDialog.hpp
include/UiForms/Bot/: BotUi.hpp
include/UiForms/MainWindow/: BotSettingsMainWindow.hpp  MainWindow.hpp  ModifyExistingModelWindow.hpp  TrainWindow.hpp
include/UiForms/Settings/: BotCombatSettingsWindow.hpp  BotKeyPointsSettingsWindow.hpp  BotNavigationSettingsWindow.hpp
python_venvs/: digitsNN_requirements.txt  install_digitsNN.bat  install_yolotrain.bat  yolotrain_requirements.txt
src/Bot/: Bot.cpp  BotNavigation.cpp  MobTimer.cpp  NearbyPlayerDebouncer.cpp  SettingsManager.cpp
src/CustomUiObj/: BotNavigationMapView.cpp  DoubleImageView.cpp  ImagePixelPicker.cpp  RectImageView.cpp  SettingsWindowRgbPosWidget.cpp
src/UiForms/: PixelPickerDialog.cpp
src/UiForms/Bot/: BotUi.cpp
src/UiForms/MainWindow/: BotSettingsMainWindow.cpp  MainWindow.cpp  ModifyExistingModelWindow.cpp  TrainWindow.cpp
src/UiForms/Settings/: BotCombatSettingsWindow.cpp  BotKeyPointsSettingsWindow.cpp  BotNavigationSettingsWindow.cpp
